Implemented lead creation, assignment, temperature tracking, admin lead deletion, and frontend lead management UI